Moved rules from the character sheet to the book for easier maintenance and less user burden

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -46,3 +46,15 @@
 \subsection{Предмети}
 Героите започват с един среден, три евтини и колкото си пожелаят много евтини предмети.
 Прогресията е много скъп(замък) - скъп(имение) - среден(двуръчен меч) - евтин(меч) - много евтин(щит, брадва).
+
+\subsection{История и биография}
+Добре описана история на персонажа помага както на играча да се вживее, така и на разказвача да следи целите на групата.
+В случай, че не ти стигат идеите, пробвай да отговориш на следните въпроси.                       \\
+1) Какво искаш от утрешния ден, от идните години, от живота?                                      \\
+2) Какво най-много цениш в хората?                                                                \\
+3) А кое мразиш най-много?                                                                        \\
+4) Опиши семейството си.                                                                          \\
+5) Опиши мястото, където си израстнал.                                                            \\
+6) Опиши поне двама приятели или познати от миналото си, които не са други играови персонажи.     \\
+7) Защо в момента се занимаваш с това?                                                            \\
+
