--- a/latex/skills.tex
+++ b/latex/skills.tex
@@ -11,7 +11,7 @@
 \subsection{Академични}
 Език* (Ум)                        \\
 Наука* (Ум)                       \\
-Тактика
+Тактика (Ум)                      \\
 
 \subsection{Схватки}
 Оръжие* (Ловкост)                 \\
