Races chaper added.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -43,6 +43,7 @@
 \include{character_creation_and_evolution}
 \include{combat_system}
 \include{magic}
+\include{races}
 \include{items}
 \include{skills}
 \include{perks}
