Some races written in. Very ugly.

--- a/latex/perks.tex
+++ b/latex/perks.tex
@@ -3,7 +3,9 @@
 \textbf{Положителни}
 \begin{itemize}
 \item{виждане в тъмнина}
-\item{Приятел - съюзник, влиятелна личност или организация, което дължи услуги на персоанжа}
+\item{Съюзник - съюзник, влиятелна личност или организация, което дължи услуги на персоанжа}
+\item{Нестареещ - не заплашван от старост иили изтичане на дните}
+\item{Заможен - започваш допълнително с един скъп предмет}
 \end{itemize}
 
 \vspace{0.7cm}
@@ -26,5 +28,6 @@
 \item{краен песимизъм}
 \item{наднормено тегло}
 \item{Враг - индивид или организация, готови да отделят ресутрси само за да навредят на персонажа}
+\item{Беден - започваш само с дрехи}
 \end{itemize}
 
