Last few ideas from the paper rules. Magic rules.

--- a/latex/items.tex
+++ b/latex/items.tex
@@ -5,7 +5,19 @@
 Каланор: 100 кралски крони = 10 кралси рояла = 1 кралски соверен                       \\
 Сзал Тлея: 13 тъмни монети = 1 черна монета; 900 черни монети = 1 дълбока монета       \\
 Креол: 1900 монети за храна = 1 монета за оръжие; 69 монети за оръжие = 1 монета за дом\\
-\subsection{Заплащане}
+
+\subsection{Надници}
+Приходи за година. Стойностите в скобите не са ликвидни.
+крепостен селянин
+страж
+ковач
+майстор на лъкове
+проститутка
+лорд-робовладелец
+войник
+рицар
+гробар
+
 \subsection{Сгради}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
