--- a/latex/magic.tex
+++ b/latex/magic.tex
@@ -1,8 +1,11 @@
 \section{Ползване на магия}
-Ниво на магията -> брой зарове мана.  \\
-Ако това е повече от наличните -> ЖТ. \\
-МТ 1/ден.                             \\
-МТ = ниво на умението.                \\
+Хвърля се Умение + Ум / 2 срещу зададена от Разказвача трудност. При
+неуспех, разликата се прилага като травма.
+
+Магически кръгове могат да изричат заклинания синхронизирано. Трудността
+на заклинанието се разпределя между магьосниците както те решат. След това
+всеки хвърля срещу собственото парче трудност. Ако някой се провали,
+изричанеот се проваля и всеки търпи съответните щети.
 
 % Template for spless.
 %\documentclass{article}
