--- a/latex/perks.tex
+++ b/latex/perks.tex
@@ -2,10 +2,12 @@
 
 \textbf{Положителни}
 \begin{itemize}
-\item{виждане в тъмнина}
+\item{Виждане в тъмнина}
 \item{Съюзник - съюзник, влиятелна личност или организация, което дължи услуги на персоанжа}
 \item{Нестареещ - не заплашван от старост иили изтичане на дните}
 \item{Заможен - започваш допълнително с един скъп предмет}
+\item{Общуване с животни}
+\item{Кристален слух}
 \end{itemize}
 
 \vspace{0.7cm}
