Moved spell semplate to a separate file. Declarin a funcion for formatting spells.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -23,6 +23,9 @@
 \usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
 \usepackage{multicol}
 
+% Macros, declared in separate headers.
+\include{spell_template}
+
 % Commands.
 % \newcommand{name}[num]{definition}
 \newcommand{\standout}[1]{\textbf #1}  % Anyone, who has read the rules, can skim through these sections for important information.
