Race template added. To be written.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -25,6 +25,7 @@
 
 % Macros, declared in separate headers.
 \include{spell_template}
+\include{race_template}
 
 % Commands.
 % \newcommand{name}[num]{definition}
