--- a/latex/races.tex
+++ b/latex/races.tex
@@ -6,6 +6,10 @@
 За всеки 3 точки по максимуми над 10, расата струва още една точка.
 За всеки 5 точки по минимуми, расата струва една точка по-малко.
 
+
+%\race{Човек}{0}{1 - 10}{1 - 10}{1- 10}{1 - 10}{}{}
+\race{Човек}{0}
+
 Човек
 Цена: 0
 
