Race tempalte now has statistics.

--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -10,15 +10,15 @@
 
 \ExplSyntaxOn
 \makeatletter
-\newcommand{\race}[2]{
+\newcommand{\race}[6]{
     \par\noindent\textbf{#1}
     \par\noindent{Цена:\ #2} \\
                              \\
     Точки:                   \\
-%    \par\noindent{Сила:\ #3}
-%    \par\noindent{Ловкост:\ #4}
-%    \par\noindent{Ум:\ $5}
-%    \par\noindent{Харизма:\ #6}
+    \par\noindent{Сила:\ #3}
+    \par\noindent{Ловкост:\ #4}
+    \par\noindent{Ум:\ #5}
+    \par\noindent{Харизма:\ #6}
 %    \par\noindent\underline{5\ ниво}
 %    \@ifmtarg{#7}{\par\vspace{\topsep}}{\list_examples:n{#7}}
 %    \par\noindent\underline{6\ ниво}
