--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -10,7 +10,7 @@
 
 \ExplSyntaxOn
 \makeatletter
-\newcommand{\race}[6]{
+\newcommand{\race}[8]{
     \par\noindent\textbf{#1}
     \par\noindent{Цена:\ #2} \\
                              \\
@@ -19,19 +19,30 @@
     \par\noindent{Ловкост:\ #4}
     \par\noindent{Ум:\ #5}
     \par\noindent{Харизма:\ #6}
-%    \par\noindent\underline{5\ ниво}
-%    \@ifmtarg{#7}{\par\vspace{\topsep}}{\list_examples:n{#7}}
-%    \par\noindent\underline{6\ ниво}
-%    \@ifmtarg{#8}{\par\vspace{\topsep}}{\list_examples:n{#8}}
+                             \\
+    Качества:                \\
+    \@ifmtarg{#7}{\par\vspace{\topsep}}{\race_template_perks{#7}}
+                             
+    Расови умения:
+    \@ifmtarg{#8}{\par\vspace{\topsep}}{\race_template_skills{#8}}
 }
 \makeatother
 
-%\cs_new:Npn \list_examples:n #1{
-%    \seq_set_split:Nnn \splitted_seq{;}{#1}
-%    \begin{itemize}
-%        \seq_map_inline:Nn \splitted_seq{
-%            \item ##1
-%        }
-%    \end{itemize}
-%}
+\cs_new:Npn \race_template_perks #1{
+    \seq_set_split:Nnn \splitted_seq{;}{#1}
+    \begin{itemize}
+        \seq_map_inline:Nn \splitted_seq{
+            \item ##1
+        }
+    \end{itemize}
+}
+
+\cs_new:Npn \race_template_skills #1{
+    \seq_set_split:Nnn \splitted_seq{;}{#1}
+    \begin{itemize}
+        \seq_map_inline:Nn \splitted_seq{
+            \item ##1
+        }
+    \end{itemize}
+}
 \ExplSyntaxOff
