--- a/latex/races.tex
+++ b/latex/races.tex
@@ -8,7 +8,7 @@
 
 
 %\race{Човек}{0}{1 - 10}{1 - 10}{1- 10}{1 - 10}{}{}
-\race{Човек}{0}{1 - 10}{1 - 10}{1 - 10}{1 - 10}
+\race{Човек}{0}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{Debel; smotan}{Stareene; debeleene}
 
 Човек
 Цена: 0
