All races expressed via the template. The template is ugly.

--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -14,7 +14,7 @@
     \par\noindent\textbf{#1}
     \par\noindent{Цена:\ #2} \\
                              \\
-    Точки:                   \\
+    Точки:
     \par\noindent{Сила:\ #3}
     \par\noindent{Ловкост:\ #4}
     \par\noindent{Ум:\ #5}
