--- a/latex/races.tex
+++ b/latex/races.tex
@@ -7,124 +7,55 @@
 За всеки 5 точки по минимуми, расата струва една точка по-малко.
 
 
-%\race{Човек}{0}{1 - 10}{1 - 10}{1- 10}{1 - 10}{}{}
-\race{Човек}{0}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{Debel; smotan}{Stareene; debeleene}
+\race{Човек}{0}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
 
-Човек
-Цена: 0
-
-Точки:
-Сила: 1 - 10
-Ловкост: 1 - 10
-Ум: 1 - 10
-Харизма: 1 - 10
-
-Качества:
-няма
-
-Расови умения:
-няма
-
-
-Джудже
-Цена: 2
-
-Точки:
-Сила: 6 - 15 
-Ловкост: 1 - 8
-Ум: 1 - 12
-Харизма: 1 - 8
-
-Качества:
-Виждане в тъмнина
-
-Расови умения:
-Джуджешки език()
-Каменоделство(Л)
-Боравене с брадва/чук(Л)
-Металургия(У)
+\race{Джудже}{2}{6-15}{1-8}{1-12}{1-8}{Виждане в тъмнина}
+{
+Джуджешки език();
+Каменоделство(Л);
+Боравене с брадва/чук(Л);
+Металургия(У);
 Ковачество()
+}
 
-
-Елфи
-Цена: 4
-
-Точки:
-Сила: 1 - 8
-Ловкост: 6 - 15
-Ум: 1 - 15
-Харизма: 1 - 12
-
-Качества:
-Непящи
-Нестареещи
-
-Расови умения:
-Елфичеки език()
-Лък(Л)
-Катерене()
-Магия - по избор(У)
+\race{Елф}{4}{1-8}{6-15}{1-15}{1-12}{Неспящ; Нестареещ}
+{
+Елфичеки език();
+Лък(Л);
+Катерене();
+Магия - по избор(У);
 Оцеляване в дивото()
+}
 
-
-Върколаци
-Цена: 3
-
-Точки
-Сила: 6 - 16
-Ловкост: 1 - 10
-Ум: 1 - 10
-Харизма: 1 - 10
-
-Качества:
-Силна имунна система
-
-Расови умения
-Оцеляване в дивото()
-Вълчи език()
-Човешки език()
-Магия-огън(У)
+\race{Върколак}{3}{6-16}{1-10}{1-10}{1-10}{Силна имунна система}
+{
+Оцеляване в дивото();
+Вълчи език();
+Човешки език();
+Магия-огън(У);
 Спринт(С)
+}
 
-
-Здрачници
-Цена: 4
-
-Точки
-Сила: 1 - 8
-Ловкост: 1 - 15
-Ум: 1 - 10
-Харизма: 6 - 16
-
-Качества:
-Изчезване в сянка
-
-Расови умения:
-Катерене()
-Оцеляване в дивото()
-Търговия(Х)
-Акробартика()
+\race{Здрачник}{4}{1-8}{1-15}{1-10}{6-16}{Изчезване в сянка}
+{
+Катерене();
+Оцеляване в дивото();
+Търговия(Х);
+Акробартика();
 Здрачничрски език()
+}
 
-
-Немъртви
-Цена: 2
-
-Точки
-Сила: 1 - 14
-Ловкост: 1 - 9
-Ум: 1 - 10
-Харизма: 1 - 4
-
-Качества:
-Усещане на живот (30 метра)
-Телепатия
-Нестареещ
+\race{Немъртъв}{2}{1-14}{1-9}{1-10}{1-4}
+{
+Усещане на живот (30 метра);
+Телепатия;
+Нестареещ;
 Уязвими в ярко слънце (всчики хвърляния -10)
-
-Расови умения:
-Магия-некромантия(У)
-Поклонничество-Смърт()
-Строителство(У)
-Тактика(У)
+}
+{
+Магия-некромантия(У);
+Поклонничество-Смърт();
+Строителство(У);
+Тактика(У);
 Език на немъртвите()
+}
