Com[pacted race descriptions by one line.

--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -11,8 +11,7 @@
 \ExplSyntaxOn
 \makeatletter
 \newcommand{\race}[8]{
-    \par\noindent\textbf{#1}
-    \par\noindent{Цена:\ #2} \\
+    \par\noindent\textbf{#1\ (#2)}
                              \\
     Точки:
     \par\noindent{Сила:\ #3}
