Corrected a typo. Races still ugly.

--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -22,7 +22,7 @@
     Качества:                \\
     \@ifmtarg{#7}{\par\vspace{\topsep}}{\race_template_perks{#7}}
                              
-    Расови умения:
+    Расови\ умения:
     \@ifmtarg{#8}{\par\vspace{\topsep}}{\race_template_skills{#8}}
 }
 \makeatother
