More compact, hut still hideous, layout for rices.

--- a/latex/races.tex
+++ b/latex/races.tex
@@ -5,8 +5,8 @@
 Човеците имат всикчи показатели 1 - 10.
 За всеки 3 точки по максимуми над 10, расата струва още една точка.
 За всеки 5 точки по минимуми, расата струва една точка по-малко.
-
-
+\\
+\begin{multicols}{2}
 \race{Човек}{0}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
 
 \race{Джудже}{2}{6-15}{1-8}{1-12}{1-8}{Виждане в тъмнина}
@@ -59,3 +59,5 @@
 Тактика(У);
 Език на немъртвите()
 }
+
+\end{multicols}
