Compacted spells - no spell levels any more.

--- a/latex/magic.tex
+++ b/latex/magic.tex
@@ -11,115 +11,53 @@
 \subsection{Заклинания} 
 
 \textbf{Жизнена енергия / Некромантия / Отвъд}  \\ 
-\underline{0 ниво} \\
-\underline{1 ниво} \\
 \begin{itemize}
-  \item{укротяване на звяр}
-  \item{усещане за немъртви}
-  \item{лекуване (умение ЖТ)}
+  \item{укротяване на звяр - 5}
+  \item{усещане за немъртви - 5}
+  \item{лекуване (умение ЖТ - 5)}
+  \item{изтляване - съществото умира след месец  докато се поддържа магията - 10}
+  \item{скелетен слуга - <умение + д6*> по показатели, следва вербални команди - 10}
+  \item{убиване - <умение> с/у <сила на опонента> - 15}
+  \item{възкресяване на тяло - 20}
+  \item{възкресяване по спомен - 25}
+  \item{възкресяване по описание - 30}
+  \item{превръщане в лич - 30}
 \end{itemize}
 
-\underline{2 ниво}
-\begin{itemize}
-  \item{изтляване - съществото умира след месец  докато се поддържа магията}
-  \item{скелетен слуга - <умение + д6*> по показатели, следва вербални команди}
-\end{itemize}
-
-\underline{3 ниво}
-\begin{itemize}
-\item{убиване - <умение> с/у <сила на опонента>}
-\end{itemize}
-
-\underline{4 ниво}
-\begin{itemize}
-\item{възкресяване на тяло}
-\end{itemize}
-
-\underline{5 ниво}
-\begin{itemize}
-\item{възкресяване по спомен}
-\end{itemize}
-
-\underline{6 ниво}
-\begin{itemize}
-\item{възкресяване по описание}
-\item{превръщане в лич}
-\end{itemize}
-
-% template
 \vspace{1cm}
 \textbf{Гадание / Пророчество (в пространството и времето)}  \\
-\underline{0 ниво}  \\
 \begin{itemize}
-  \item{усещане позицията на предмет след докосване, до няколко километра}
-  \item{усещане името на същество}
-  \item{виждане на далеч}
-  \item{светлина}
+  \item{усещане позицията на предмет след докосване, до няколко километра - 5}
+  \item{усещане името на същество - 5}
+  \item{виждане на далеч - 5}
+  \item{светлина - 5}
+  \item{живо оръжие (бoравенето става равно на умението гадаене) - 10}
+  \item{уцелване отвъд прикритие (атака = умение) - 10}
+  \item{виждане през стени - 10}
+  \item{усещане на лъжи - 10}
+  \item{виждане в тъмнина - 10}
+  \item{посока към най-близкия град/път/река - 10}
+  \item{предсказване на удари - +умение към боравене - 15}
 \end{itemize}
 
-\underline{1 ниво}  \\
-\begin{itemize}
-  \item{живо оръжие (буравенето става равно на умението гадаене)}
-  \item{уцелване отвъд прикритие (атака = умение)}
-  \item{виждане през стени}
-  \item{усещане на лъжи}
-  \item{виждане в тъмнина}
-  \item{посока към най-близкия град/път/река}
-\end{itemize}
 
-\underline{2 ниво} \\
-\begin{itemize}
-\item{предсказване на удари - +умение към боравене}
-\end{itemize}
-
-\underline{3 ниво} \\
-
-\underline{4 ниво} \\
-
-\underline{5 ниво} \\
-
-\underline{6 ниво} \\
-
-
-
-% template
 \vspace{1cm}
 \textbf{Огън}  \\
-\underline{0 ниво}  \\
 \begin{itemize}
-  \item{запалване на много свещи}
-  \item{запалване на дрехи}
-  \item{предпазване от жега}
+  \item{запалване на много свещи - 5}
+  \item{запалване на дрехи - 5}
+  \item{предпазване от жега - 5}
+  \item{огнено копие - Щ = умение, високи, 10}
+  \item{палене на колиба - 10}
+  \item{запалване на човек - 10}
+  \item{защита от огън - 10}
+  \item{огнено кълбо - <умение> радиус - 15}
+  \item{запалване на тълпа - 15}
+  \item{защито от огън на тълпа, 15}
+  \item{запалване на град - 20}
+  \item{езеро от лава - 20}
+  \item{защита от огън на град - 20}
 \end{itemize}
-
-\underline{1 ниво}  \\
-\begin{itemize}
-  \item{огнено копие - Щ = умение, високи}
-  \item{палене на колиба}
-  \item{запалване на човек}
-  \item{защита от огън}
-\end{itemize}
-
-\underline{2 ниво}
-\begin{itemize}
-  \item{огнено кълбо - <умение> радиус}
-  \item{запалване на тълпа}
-  \item{защито от огън на тълпа}
-\end{itemize}
-
-\underline{3 ниво}
-\begin{itemize}
-  \item{запалване на град}
-  \item{езеро от лава}
-  \item{защита от огън на град}
-\end{itemize}
-
-\underline{4 ниво}  \\
-
-\underline{5 ниво}  \\
-
-\underline{6 ниво}  \\
-
 
 Бъдещи идеи:  \\
 Вятър (Ум)        - мъгла, ниво 2 мълния щяти по Ум, високи.                                         \\
