Removed superficial new lines. Spells not under a common template yet.

--- a/latex/magic.tex
+++ b/latex/magic.tex
@@ -10,7 +10,7 @@
 
 \subsection{Заклинания} 
 
-\textbf{Жизнена енергия / Некромантия / Отвъд}  \\ 
+\textbf{Жизнена енергия / Некромантия / Отвъд} 
 \begin{itemize}
   \item{укротяване на звяр - 5}
   \item{усещане за немъртви - 5}
@@ -25,7 +25,7 @@
 \end{itemize}
 
 \vspace{1cm}
-\textbf{Гадание / Пророчество (в пространството и времето)}  \\
+\textbf{Гадание / Пророчество (в пространството и времето)}
 \begin{itemize}
   \item{усещане позицията на предмет след докосване, до няколко километра - 5}
   \item{усещане името на същество - 5}
@@ -42,7 +42,7 @@
 
 
 \vspace{1cm}
-\textbf{Огън}  \\
+\textbf{Огън}
 \begin{itemize}
   \item{запалване на много свещи - 5}
   \item{запалване на дрехи - 5}
