--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -1,6 +1,6 @@
 % This file declares a template for player races. Here is an example on how to use it:
 %\begin{document}
-%\race{Race name}{Point price}{}{}{example 3}{}{}{}
+%\race{Race name}{Point price}{Strength}{Dexterity}{Mind}{Charisma}{Perks}{Race Skills}
 %\end{document}
 
 \usepackage{xparse}
