Removed some spacing commands, that I do not understand. No visual changes resulted.

--- a/latex/race_template.tex
+++ b/latex/race_template.tex
@@ -19,10 +19,10 @@
                              \\
                              \\
     Качества:                \\
-    \@ifmtarg{#7}{\par\vspace{\topsep}}{\race_template_perks{#7}}
+    \@ifmtarg{#7}{{\topsep}}{\race_template_perks{#7}}
                              
     Расови\ умения:
-    \@ifmtarg{#8}{\par\vspace{\topsep}}{\race_template_skills{#8}}
+    \@ifmtarg{#8}{{\topsep}}{\race_template_skills{#8}}
 }
 \makeatother
 
