Using package enumitem.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -22,6 +22,7 @@
 \usepackage[table]{xcolor}     % For coloured rows within tables.
 \usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
 \usepackage{multicol}
+\usepackage{enumitem}          % \begin{enumerate}[topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
 
 % Macros, declared in separate headers.
 \include{spell_template}
