--- a/latex/races.tex
+++ b/latex/races.tex
@@ -7,9 +7,9 @@
 За всеки 5 точки по минимуми, расата струва една точка по-малко.
 \\
 \begin{multicols}{2}
-\race{Човек}{0}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
+\race{Човек}{0}{}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
 
-\race{Джудже}{2}{6-15}{1-8}{1-12}{1-8}{Виждане в тъмнина}
+\race{Джудже}{2}{}{6-15}{1-8}{1-12}{1-8}{Виждане в тъмнина}
 {
 Джуджешки език();
 Каменоделство(Л);
@@ -18,7 +18,7 @@
 Ковачество()
 }
 
-\race{Елф}{4}{1-8}{6-15}{1-15}{1-12}{Неспящ; Нестареещ}
+\race{Елф}{4}{}{1-8}{6-15}{1-15}{1-12}{Неспящ; Нестареещ}
 {
 Елфичеки език();
 Лък(Л);
@@ -27,7 +27,7 @@
 Оцеляване в дивото()
 }
 
-\race{Върколак}{3}{6-16}{1-10}{1-10}{1-10}{Силна имунна система}
+\race{Върколак}{3}{}{6-16}{1-10}{1-10}{1-10}{Силна имунна система}
 {
 Оцеляване в дивото();
 Вълчи език();
@@ -36,7 +36,7 @@
 Спринт(С)
 }
 
-\race{Здрачник}{4}{1-8}{1-15}{1-10}{6-16}{Изчезване в сянка}
+\race{Здрачник}{4}{}{1-8}{1-15}{1-10}{6-16}{Изчезване в сянка}
 {
 Катерене();
 Оцеляване в дивото();
@@ -45,7 +45,7 @@
 Здрачничрски език()
 }
 
-\race{Немъртъв}{2}{1-14}{1-9}{1-10}{1-4}
+\race{Немъртъв}{2}{}{1-14}{1-9}{1-10}{1-4}
 {
 Усещане на живот (30 метра);
 Телепатия;
@@ -59,5 +59,10 @@
 Тактика(У);
 Език на немъртвите()
 }
+
+\race{Example}{0}
+{An example race}
+{5}{5}{5}{5}
+{a}{b}
 
 \end{multicols}
