Added Niog race.

--- a/latex/races.tex
+++ b/latex/races.tex
@@ -60,9 +60,19 @@
 Език на немъртвите()
 }
 
-\race{Example}{0}
-{An example race}
-{5}{5}{5}{5}
-{a}{b}
+\race{Ниог}{4}
+{Тези антропоморфни птици владеят сръчно телекинеза. Живеят в технологични планински градове.}
+{1-6}{1-10}{1-14}{1-10}
+{
+Свободно летене (2 точки);
+Фини манипулатори чрез телекинеза
+}
+{
+Староендивалски език();
+Астрономия(Ум);
+Архитектура(Ум);
+Употреба на обсадни оръжия(Ум);
+Тaктика(Ум)
+}
 
 \end{multicols}
