Goblins and orcs added.

--- a/latex/races.tex
+++ b/latex/races.tex
@@ -75,4 +75,32 @@
 Тaктика(Ум)
 }
 
+\race{Орк}{-2}
+{}
+{1-16}{1-8}{1-6}{1-4}
+{
+Жажда за кръв
+}
+{
+Език на гоблините()
+Боравене с брадва(Л);
+Оцеляване в дивото();
+Строеж на лагер();
+Проследяване в дивото()
+}
+
+\race{Гоблин}{-3}
+{}
+{1-6}{1-8}{1-8}{1-9}
+{
+Ранна старост
+}
+{
+Език на гобилините();
+Скриване от поглед(Л);
+Капани(Л);
+Плуване();
+Катерене()
+}
+
 \end{multicols}
