Removed duplicate price declarations. Document shortened to 16 pages.

--- a/latex/items.tex
+++ b/latex/items.tex
@@ -23,7 +23,7 @@
 \begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
 мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
 щит       & меч                                     & двуръчен меч             & имение                         & замък     \\
-брадва    & халчеста къса ризница пазаене 6 здр. 6  & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
+брадва    & халчеста къса ризница                   & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
 йуче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
 колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
           & магаре С30                              & боен кон                 &
@@ -52,10 +52,4 @@
 % Щитове.
 Дървен щит 80см       & 5-12                 & близък     & ниски      & поваляне       & 2кг   & много евтин  \\
 \end{tabular}
-
-\subsection{Брони}
-lorica segmenta - среден  \\
-халчеста къса броня - евтин \\
-халчеста с ръкави и пола - среден \\
-кожена - много евтин
 
