Small vocabulary changes and new lines.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -36,9 +36,9 @@
 \subsection{Носене}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l }
-Максимален товар, кг & Придвижване, м            & Наказание  \\
-Сила                 & Сила + Ловкост + Ловкост  & -0         \\
-Сила * 2             & Сила + Ловкост            & -0         \\
+Максимален товар, кг & Придвижване, м            & Модификация  \\
+Сила                 & Сила + Ловкост + Ловкост  &  0           \\
+Сила * 2             & Сила + Ловкост            &  0           \\
 Сила * 5             & Сила                      & -5
 \end{tabular}
 
