--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -41,7 +41,7 @@
 Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
 Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции. 
 \end{multicols}
-Пример:
+\underline{Пример}:
 \emph{Пешо, с копие и нож, напада Жоро, с меч.
 Пешо връхлита и напада с копието.
 Хвърля боравене + d6* < боравене на Жоро.
@@ -70,7 +70,8 @@
 \item {\bfОбсег} \\
 Обсегът на оръжията има различен смисъл за ръкопашни и далечни оръжия.
 При ръкопашните оръжия, това е оптималната дистанция.
-На всички по-близки дистанции оръжието има наказание от -5 боравене и половин щети.
+На всички по-близки дистанции оръжието има модификация от -5 боравене и половин щети.
+\\
 За далечни оръжия, обсегът е максималното разстрояние, на което лесно може да се улучи цел.
 На по-голямо от това разстояние атаката е с -5 наказание, на по-голямо от два пъти това разстояние става -10 и на от три до четири пъти това разстояние е на -15.
 Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък.
@@ -88,7 +89,8 @@
 
 \subsection{Брони}
 Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
-Пазене:
+\\
+\textbf{Пазене}:
 \begin{itemize}
 \item{Шлем за темето(селяшки, евентуално с периферия) 1}
 \item{Шлем с открито лице(с набузници или кръст за носа и очите, каска) 2}
@@ -107,21 +109,23 @@
 \end{itemize}
 
 Общо максимум: 15
-
-Здравина:
+\\
+\textbf{Здравина}:
 \begin{itemize}
 \item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
 \item{Халчеста броня, подплатена с гамбезон 4}
 \item{Ламенарна броня, подплатена с гамбезон 6}
 \item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 8}
 \item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 10}
+\\
+\\
 Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
 \end{itemize}
 
 \subsection{Механика}
 Нека си дойдем на думата.
-Удар или група удари (едно ръкопашно действие) се групират в обща цел – нападение или защита.
-Нападащият добавя d6* към боравенето си и сравнява с боравене на отбраняващият се, който се отбранява с всички средства налични – отбягва, парира.
+Удар или група удари (едно ръкопашно действие) се групират в обща цел – нападение или отбрана.
+Нападащият добавя d6* към боравенето си и сравнява резултата с боравене на отбраняващият се, който се отбранява с всички средства налични – отбягва, парира.
 Подробности:
 \begin{itemize}
 \item[-]{отбраняване само чрез отбягване носи наказание от -5, но добавя +5 на боравене при атаки срещу тази конкретна цел на следващия ход}
