--- a/latex/magic.tex
+++ b/latex/magic.tex
@@ -7,14 +7,16 @@
 всеки хвърля срещу собственото парче трудност. Ако някой се провали,
 изричанеот се проваля и всеки търпи съответните щети.
 
+За всяко настоящо поддържано заклинание от същата школа магия, умението се
+намаля с 5 точки временно.
 
-\subsection{Заклинания} 
+\subsection{Заклинания}
 
-\textbf{Жизнена енергия / Некромантия / Отвъд} 
+\textbf{Жизнена енергия / Некромантия / Отвъд}
 \begin{itemize}
   \item{укротяване на звяр - 5}
   \item{усещане за немъртви - 5}
-  \item{лекуване (умение ЖТ - 5)}
+  \item{лекуване (умение + d6* ЖТ) - 5}
   \item{изтляване - съществото умира след месец  докато се поддържа магията - 10}
   \item{скелетен слуга - <умение + д6*> по показатели, следва вербални команди - 10}
   \item{убиване - <умение> с/у <сила на опонента> - 15}
