--- a/latex/races.tex
+++ b/latex/races.tex
@@ -1,10 +1,10 @@
 \section{Раси}
-Метаправила:
-Качествата струват съответно по 1 и -1 точка за положителни и отрицателни качества.
-Правото на две расови умения на 5, без да е нужно да покриват изисквания, без точките да се плащат от (5 * Ум), струва една точка.
-Човеците имат всикчи показатели 1 - 10.
-За всеки 3 точки по максимуми над 10, расата струва още една точка.
-За всеки 5 точки по минимуми, расата струва една точка по-малко.
+Метаправила:  \\
+Качествата струват съответно по 1 и -1 точка за положителни и отрицателни качества.  \\
+Правото на две расови умения на 5, без да е нужно да покриват изисквания, без точките да се плащат от (5 * Ум), струва една точка.  \\
+Човеците имат всикчи показатели 1 - 10.  \\
+За всеки 3 точки по максимуми над 10, расата струва още една точка.  \\
+За всеки 5 точки по минимуми, расата струва една точка по-малко.  \\
 \\
 \begin{multicols}{2}
 \race{Човек}{0}{}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
