Wages list added.

--- a/latex/items.tex
+++ b/latex/items.tex
@@ -4,7 +4,7 @@
 Луседом Терея: 100 имперски крони = 10 имперски рояла = 1 имперски соверен             \\
 Каланор: 100 кралски крони = 10 кралси рояла = 1 кралски соверен                       \\
 Сзал Тлея: 13 тъмни монети = 1 черна монета; 900 черни монети = 1 дълбока монета       \\
-Креол: 1900 монети за храна = 1 монета за оръжие; 69 монети за оръжие = 1 монета за дом\\
+Креол: 1900 монети за храна = 1 монета за оръжие; 69 монети за оръжие = 1 монета за дом
 
 \subsection{Надници}
 Приходи за година. Стойностите в скобите не са ликвидни.
@@ -17,6 +17,63 @@
 войник
 рицар
 гробар
+
+Business / Population required per instance of business (called Support Value or SV)
+Shoemakers     150
+Furriers      250
+Maidservants     250
+Tailors                   250
+Barbers                   350
+Jewelers     400
+Taverns/Restaurants  400
+Old-Clothes     400
+Pastrycooks     500
+Masons                   500
+Carpenters     550
+Weavers     600
+Chandlers     700
+Mercers     700
+Coopers     700
+Bakers                   800
+Watercarriers     850
+Scabbardmakers   850
+Wine-Sellers     900
+Hatmakers     950
+Saddlers     1,000
+Chicken Butchers  1,000
+Pursemakers     1,100
+Butchers     1,200
+Fishmongers     1,200
+Beer-Sellers     1,400
+Buckle Makers     1,400
+Plasterers     1,400
+Spice Merchants   1,400
+Blacksmiths     1,500
+Painters     1,500
+Doctors                   1,700*
+Roofers       1,800
+Locksmiths     1,900
+Bathers                   1,900
+Ropemakers     1,900
+Inns                   2,000
+Tanners                   2,000
+Copyists    2,000
+Sculptors    2,000
+Rugmakers    2,000
+Harness-Makers  2,000
+Bleachers    2,100
+Hay Merchants    2,300
+Cutlers                  2,300
+Glovemakers   2,400
+Woodcarvers   2,400
+Woodsellers   2,400
+Magic-Shops   2,800
+Bookbinders   3,000
+Illuminators   3,900
+Booksellers   6,300
+*These are licensed doctors. Total doctor SV is 350.
+
+Some other figures: There will be one noble household per 200 population, one lawyer ("advocate") per 650, one clergyman per 40 and one priest per 25-30 clergy. Businesses not listed here will most likely have an SV from 5,000 to 25,000! The "Magic Shop" means a shop where wizards can purchase spell ingredients, scroll paper and the like, not a place to buy magic swords off the shelf. The SV list was taken (mostly) from the tax list of Paris in 1292, and checked against other sources for accuracy. This list can be found in Life in a Medieval City by Joseph and Francis Geis (Harper and Row, 1981). This is a fine book by amateur historians, which includes some fascinating descriptions of medieval city life and layout. 
 
 \subsection{Сгради}
 \rowcolors{1}{white}{lightgray}
