--- a/latex/skills.tex
+++ b/latex/skills.tex
@@ -1,5 +1,7 @@
 
 \section{Умения}
+Означените със звездичка умения са събирателни понятия.
+Например може да се избере \textit{елфически} език или оръжие \textit{брадва} или наука \textit{алхимия}.
 \subsection{Общуване}
 Лъжене (Чар)                      \\
 Сплашване (Чар)                   \\
@@ -27,7 +29,7 @@
 \subsection{Епични провали}
 Ако при мятане на д6* се падне -5 или +6, се мята отново.
 Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
-Ако крайният резултат е <0, имаме епичен провал, честито!  \\ 
+Ако крайният резултат е <0, имаме епичен провал, честито!  \\
 
 При атака с оръжие           \\
 - да го изтърве              \\
