Compact lists added and used to eliminate empty liens in armor section.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -23,6 +23,7 @@
 \usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
 \usepackage{multicol}
 \usepackage{enumitem}          % \begin{enumerate}[topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+\usepackage{mdwlist}           % Compact lists via starred version e.g. enume
 
 % Macros, declared in separate headers.
 \include{spell_template}
