--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -91,7 +91,7 @@
 Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
 \\
 \textbf{Пазене}:
-\begin{itemize}
+\begin{itemize*}
 \item{Шлем за темето(селяшки, евентуално с периферия) 1}
 \item{Шлем с открито лице(с набузници или кръст за носа и очите, каска) 2}
 \item{Шлем със забрало(пълен шлем) 3}
@@ -106,12 +106,12 @@
 \item{Сабатони (бронирани ботуши) +1}
 \item{Грейвси (броня от коленото надолу по пищяла) +1}
 \item{Набедреници(може да е пола, част от дълга ризница или отделен компонент) +1}
-\end{itemize}
+\end{itemize*}
 
 Общо максимум: 15
 \\
 \textbf{Здравина}:
-\begin{itemize}
+\begin{itemize*}
 \item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
 \item{Халчеста броня, подплатена с гамбезон 4}
 \item{Ламенарна броня, подплатена с гамбезон 6}
@@ -120,7 +120,7 @@
 \\
 \\
 Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
-\end{itemize}
+\end{itemize*}
 
 \subsection{Механика}
 Нека си дойдем на думата.
