Compact enums used now for spells and perks as well.

--- a/latex/magic.tex
+++ b/latex/magic.tex
@@ -13,7 +13,7 @@
 \subsection{Заклинания}
 
 \textbf{Жизнена енергия / Некромантия / Отвъд}
-\begin{itemize}
+\begin{itemize*}
   \item{укротяване на звяр - 5}
   \item{усещане за немъртви - 5}
   \item{лекуване (умение + d6* ЖТ) - 5}
@@ -24,11 +24,11 @@
   \item{възкресяване по спомен - 25}
   \item{възкресяване по описание - 30}
   \item{превръщане в лич - 30}
-\end{itemize}
+\end{itemize*}
 
 \vspace{1cm}
 \textbf{Гадание / Пророчество (в пространството и времето)}
-\begin{itemize}
+\begin{itemize*}
   \item{усещане позицията на предмет след докосване, до няколко километра - 5}
   \item{усещане името на същество - 5}
   \item{виждане на далеч - 5}
@@ -40,12 +40,12 @@
   \item{виждане в тъмнина - 10}
   \item{посока към най-близкия град/път/река - 10}
   \item{предсказване на удари - +умение към боравене - 15}
-\end{itemize}
+\end{itemize*}
 
 
 \vspace{1cm}
 \textbf{Огън}
-\begin{itemize}
+\begin{itemize*}
   \item{запалване на много свещи - 5}
   \item{запалване на дрехи - 5}
   \item{предпазване от жега - 5}
@@ -59,7 +59,7 @@
   \item{запалване на град - 20}
   \item{езеро от лава - 20}
   \item{защита от огън на град - 20}
-\end{itemize}
+\end{itemize*}
 
 Бъдещи идеи:  \\
 Вятър (Ум)        - мъгла, ниво 2 мълния щяти по Ум, високи.                                         \\
