--- a/latex/perks.tex
+++ b/latex/perks.tex
@@ -1,18 +1,18 @@
 \section{Качества}
 
 \textbf{Положителни}
-\begin{itemize}
+\begin{itemize*}
 \item{Виждане в тъмнина}
 \item{Съюзник - съюзник, влиятелна личност или организация, което дължи услуги на персоанжа}
 \item{Нестареещ - не заплашван от старост иили изтичане на дните}
 \item{Заможен - започваш допълнително с един скъп предмет}
 \item{Общуване с животни}
 \item{Кристален слух}
-\end{itemize}
+\end{itemize*}
 
 \vspace{0.7cm}
 \textbf{Отрицателни}
-\begin{itemize}
+\begin{itemize*}
 \item{куцане (1/4 скорост)}
 \item{слаб слух}
 \item{нелогичен панически страх от паяци/змии/широки отркити пространства/тесни затворени пространства/височини}
@@ -31,5 +31,5 @@
 \item{наднормено тегло}
 \item{Враг - индивид или организация, готови да отделят ресутрси само за да навредят на персонажа}
 \item{Беден - започваш само с дрехи}
-\end{itemize}
+\end{itemize*}
 
