Singular form for Player Character.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -1,4 +1,4 @@
-\section{Игрови персонажи}
+\section{Игрови персонаж}
 \emph{Ел'тлменел от селото Нлимна има резки чети за елф, и определено неестествен ръст на неговите метър и деведесет.
 Олекотената ризница от еленски рога не приквива силните му ръце и крака, а копието и лъка допълват картината на ловец/войн, само тъмнозеленото ленено наметало остава.
 Менел, както го наричат не-елфите навсякъде, е израстнал в гори, не умее да чете и е страшно глупав, когато става дума за светски дела.}
