Chapter boundry empty pages removed. 14 pages now.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -46,12 +46,12 @@
 % Document body.
 \begin{document}
 \input{titlepage.tex}
-\include{character_creation_and_evolution}
-\include{combat_system}
-\include{magic}
-\include{races}
-\include{items}
-\include{skills}
-\include{perks}
+\input{character_creation_and_evolution}
+\input{combat_system}
+\input{magic}
+\input{races}
+\input{items}
+\input{skills}
+\input{perks}
 \tableofcontents
 \end{document}
