Common lues extracted to separate include file/folder.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -6,8 +6,9 @@
 % Document body.
 \begin{document}
 \input{titlepage.tex}
-\input{character_creation_and_evolution}
-\input{combat_system}
+
+\input{rules}
+
 \input{magic}
 \input{races}
 \input{items}
