Moved rule files to a dedicated directory rules.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -1,3 +1,5 @@
+% This file concers character charuin and eviutuion. It;s aim is to be consice anad genre-independent.
+
 \section{Игрови персонаж}
 \emph{Ел'тлменел от селото Нлимна има резки чети за елф, и определено неестествен ръст на неговите метър и деведесет.
 Олекотената ризница от еленски рога не приквива силните му ръце и крака, а копието и лъка допълват картината на ловец/войн, само тъмнозеленото ленено наметало остава.
