Fantasy(default) lists of items, skills etc. moved to separate folder - per genre.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -9,10 +9,11 @@
 
 \input{rules}
 
-\input{magic}
-\input{races}
-\input{items}
-\input{skills}
+\input{fantasy/magic}
+\input{fantasy/races}
+\input{fantasy/items}
+\input{fantasy/skills}
+
 \input{perks}
 \tableofcontents
 \end{document}
