--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -3,12 +3,13 @@
 % Used packages, global commands, styles.
 \input{preamble}
 
-% Document body.
 \begin{document}
 \input{titlepage.tex}
 
+% First chapter - rules, that are common to all games.
 \input{rules}
 
+% Setting-specific tables. What was a luxury once is now but a commodity.
 \input{fantasy/magic}
 \input{fantasy/races}
 \input{fantasy/items}
