Innitial concept of experience points introduced.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -60,3 +60,10 @@
 6) Опиши поне двама приятели или познати от миналото си, които не са други играови персонажи.     \\
 7) Защо в момента се занимаваш с това?                                                            \\
 
+\subsection{Развитие}
+През определени периоди време се начислява промяна в способностите на персонаж.
+Губи се една точка на някое умение, което не е ползвано последната сесия.
+Получаса се една точка на някое умение (може да е същото каот изгубеното), което героят е ползвал от последното начисляване.
+Получава още една точка най-много допринеслият през последната сесия.
+Получава още една точка най-много допринеслият от последното начисляване.
+
