Make target modern prepared for receiving content.

--- a/latex/elementaris-modern.tex
+++ b/latex/elementaris-modern.tex
@@ -10,10 +10,8 @@
 \input{rules}
 
 % Setting-specific tables. What was a luxury once is now but a commodity.
-\input{fantasy/magic}
-\input{fantasy/races}
-\input{fantasy/items}
-\input{fantasy/skills}
+\input{modern/items}
+\input{modern/skills}
 
 \input{rules/perks}
 \tableofcontents
