--- a/latex/elementaris-sci-fi.tex
+++ b/latex/elementaris-sci-fi.tex
@@ -10,10 +10,9 @@
 \input{rules}
 
 % Setting-specific tables. What was a luxury once is now but a commodity.
-\input{fantasy/magic}
-\input{fantasy/races}
-\input{fantasy/items}
-\input{fantasy/skills}
+\input{sci-fi/races}
+\input{sci-fi/items}
+\input{sci-fi/skills}
 
 \input{rules/perks}
 \tableofcontents
