New cover for the modern version.

--- a/latex/elementaris-sci-fi.tex
+++ b/latex/elementaris-sci-fi.tex
@@ -4,7 +4,7 @@
 \input{preamble}
 
 \begin{document}
-\input{titlepage.tex}
+\input{sci-fi/titlepage.tex}
 
 % First chapter - rules, that are common to all games.
 \input{rules}
