--- a/latex/elementaris-fantasy.tex
+++ b/latex/elementaris-fantasy.tex
@@ -4,7 +4,7 @@
 \input{preamble}
 
 \begin{document}
-\input{titlepage.tex}
+\input{fantasy/titlepage.tex}
 
 % First chapter - rules, that are common to all games.
 \input{rules}
