--- a/latex/sci-fi/titlepage.tex
+++ b/latex/sci-fi/titlepage.tex
@@ -4,7 +4,7 @@
 % Upper part of the page. The '~' is needed because \\
 % only works if a paragraph has stared.
 \textsc{\Huge Елементарис}\\[1.5cm]
-\includegraphics[width=0.85\textwidth]{../images/dragon}~
+\includegraphics[width=0.85\textwidth]{../images/spaceship1}~
 \\[1cm]
 
 \vfill
