Minor: one new negative perk added.

--- a/latex/rules/perks.tex
+++ b/latex/rules/perks.tex
@@ -31,5 +31,6 @@
 \item{наднормено тегло}
 \item{Враг - индивид или организация, готови да отделят ресутрси само за да навредят на персонажа}
 \item{Беден - започваш само с дрехи}
+\item{Кръвожадност}
 \end{itemize*}
 
