--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -10,5 +10,33 @@
 \subsection{Оръжия}
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
 Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност         \\
+% Карабини
+M25                   &                      &            &            & 10x40 sight    & 5kg   &                  \\ %
+M21                   &                      &            &            &                & 5.27kg&                  \\ % 20 round
+M24                   &                      &            &            &                & 5.8kg &                  \\ % 20 round % caliber 7.62x51 NATO % muzzle velocity 790m
+M2010                 &                      &            &            &                &       &                  \\
+автомат               & 5(12)                & 400м       & високи     & авт. стрелба   & 5кг   & среден           \\
+пълнител автомат 30   &                      &            &            &                & 0.25кг& мн. малък        \\
+пистолет              & 4(8)                 & 50м        & средни     &                & 1кг   & евтин
+пълнител пистолет 12  &                      &            &            &                & 0.1кг & мн. евтин        \\
+граната               & 3 - 10               & сила*4     & високи 5м средни 10м ниски 20м &                & 0.2кг\\
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          kk
+
 \end{tabular}
+
+\subsection{Брони}
+Кевларена бонежилетка - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина.
+Керамична прола - здравина 20, живот 3 удара, маса половин от пазене * здравина.
 
